k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foodgo
  labels:
    app: foodgo
