k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foodgo-frontend
  namespace: foodgo
  labels:
    app: foodgo-frontend
spec:
  type: LoadBalancer
  selector:
    app: foodgo-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
