k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foodgo-ingress
  namespace: foodgo
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: foodgo-backend
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: foodgo-frontend
                port:
                  number: 80
